chore: add icons and string resources

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">EventPlannerTask</string>
+    <string name="home">Home</string>
+    <string name="upcoming">Upcoming</string>
 </resources>
