--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">EventPlannerTask</string>
     <string name="home">Home</string>
     <string name="upcoming">Upcoming</string>
+    <string name="create_event">Create event</string>
 </resources>
