--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,28 @@
     <string name="home">Home</string>
     <string name="upcoming">Upcoming</string>
     <string name="create_event">Create event</string>
+    <string name="one_am">1 AM</string>
+    <string name="two_am">2 AM</string>
+    <string name="three_am">3 AM</string>
+    <string name="four_am">4 AM</string>
+    <string name="five_am">5 AM</string>
+    <string name="six_am">6 AM</string>
+    <string name="seven_am">7 AM</string>
+    <string name="eight_am">8 AM</string>
+    <string name="nine_am">9 AM</string>
+    <string name="ten_am">10 AM</string>
+    <string name="eleven_am">11 AM</string>
+    <string name="twelve_am">12 PM</string>
+    <string name="one_pm">1 PM</string>
+    <string name="two_pm">2 PM</string>
+    <string name="three_pm">3 PM</string>
+    <string name="four_pm">4 PM</string>
+    <string name="five_pm">5 PM</string>
+    <string name="six_pm">6 PM</string>
+    <string name="seven_pm">7 PM</string>
+    <string name="eight_pm">8 PM</string>
+    <string name="nine_pm">9 PM</string>
+    <string name="ten_pm">10 PM</string>
+    <string name="eleven_pm">11 PM</string>
+    <string name="twelve_pm">12 AM</string>
 </resources>
